--- a/index.html
+++ b/index.html
@@ -100,7 +100,44 @@
     style="display:flex; justify-content:center; align-items:center; height:100vh; font-family:sans-serif; color:#444;">
     Iniciando Palacio Legislativo...</div>
   <script type="text/babel">
+    /* Error Boundary & Global Handler */
+    window.onerror = function (message, source, lineno, colno, error) {
+      console.error("Global Error Caught:", message, source, lineno, colno, error);
+    };
+
     const { useState, useEffect, useMemo, useRef } = React;
+
+    class ErrorBoundary extends React.Component {
+      constructor(props) {
+        super(props);
+        this.state = { hasError: false, error: null, errorInfo: null };
+      }
+      static getDerivedStateFromError(error) { return { hasError: true, error }; }
+      componentDidCatch(error, errorInfo) {
+        console.error("React Error Boundary:", error, errorInfo);
+        this.setState({ errorInfo });
+      }
+      render() {
+        if (this.state.hasError) {
+          return (
+            <div className="p-10 bg-black text-white min-h-screen font-mono space-y-4">
+              <h1 className="text-red-500 text-3xl font-black">CRASH DETECTADO</h1>
+              <div className="bg-red-900/20 border border-red-500 p-4 rounded-xl overflow-auto text-sm">
+                <p className="font-bold">{this.state.error && this.state.error.toString()}</p>
+                <div className="mt-4 text-xs opacity-70 whitespace-pre-wrap">{this.state.errorInfo?.componentStack}</div>
+              </div>
+              <button
+                onClick={() => { sessionStorage.clear(); window.location.reload(); }}
+                className="bg-white text-black px-6 py-3 font-bold rounded-lg uppercase tracking-widest hover:bg-slate-200"
+              >
+                Reiniciar de Emergencia (Borrar Datos)
+              </button>
+            </div>
+          );
+        }
+        return this.props.children;
+      }
+    }
     const EXTERNAL_DATA = {
       "PARTIES": {
         "Progreso Social": {
@@ -7884,7 +7921,7 @@
                   votes: { ...(prev.votes || {}), [voterIdx]: optIdx },
                   currentVoterPos: isLast ? prev.currentVoterPos : prev.currentVoterPos + 1,
                   isAiProcessing: false,
-                  logs: [`${players[voterIdx].name} ha emitido su recomendación: Opción ${optIdx + 1}`, ...(prev.logs || [])]
+                  logs: [`${(players[voterIdx]?.name || 'IA')} ha emitido su recomendación: Opción ${optIdx + 1}`, ...(prev.logs || [])]
                 };
                 updateRemote(newGs);
                 return newGs;
@@ -7917,7 +7954,7 @@
                   ...prev,
                   negotiationSwitches: { ...(prev?.negotiationSwitches || {}), [nextIA.i]: bestSwitchIdx },
                   isAiProcessing: false,
-                  logs: [`${nextIA?.p?.name || 'Actor'} evaluando coaliciones...`, ...(prev?.logs || [])]
+                  logs: [`${(nextIA?.p?.name || 'Actor')} evaluando coaliciones...`, ...(prev?.logs || [])]
                 };
                 updateRemote(newGs);
                 return newGs;
@@ -9081,7 +9118,12 @@
       );
     }
 
-    ReactDOM.createRoot(document.getElementById('root')).render(<App />);
+    const root = ReactDOM.createRoot(document.getElementById('root'));
+    root.render(
+      <ErrorBoundary>
+        <App />
+      </ErrorBoundary>
+    );
   </script>
 </body>
 
