--- a/index.html
+++ b/index.html
@@ -8754,8 +8754,12 @@
                           <button onClick={() => {
                             const newGs = { ...gs, showResults: false, negotiating: true, isAiProcessing: false };
                             setGs(newGs);
+                            // Sincronizar primero
                             updateRemote(newGs);
-                            setTab('negotiation');
+                            // Forzar cambio visual en el siguiente ciclo
+                            setTimeout(() => {
+                              setTab('negotiation');
+                            }, 50);
                           }} className="w-full bg-orange-600 hover:bg-orange-500 text-white font-bold py-6 rounded-3xl shadow-xl transition-all uppercase text-sm tracking-widest animate-pulse font-sans">Abrir Mesa de Negociación</button>
                         ) : (
                           <div className="bg-orange-500/10 border border-orange-500/20 p-6 rounded-3xl text-center text-orange-400 font-bold uppercase text-[11px] tracking-widest italic animate-pulse">
