--- a/index.html
+++ b/index.html
@@ -8532,7 +8532,7 @@
       );
     }
 
-    function TabParliament({ gs, castVote, finalizeVote, closeResults, isHost, playerId, setTab, nextSituation }) {
+    function TabParliament({ gs, castVote, finalizeVote, closeResults, isHost, playerId, setTab, nextSituation, setGs, updateRemote }) {
       if (!gs) return null;
 
       const players = gs.players || [];
